# PiAlarm

./: .csscomb.json  .esdoc.json  .eslintrc  .eslintrc.js  .gitignore  CHANGELOG-raw.md  LICENSE  README.md  TODO.txt  alarmTest.js  bundleEntry.js  dodo.py  init.es6  lcd.aloo.py  main.es6  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run-server.js  secret_example.json  server.js  test.py  tmp.py  todo.txt  webpack.config.js  wpa_suplicant.conf
.archive-python/: parse_status.py  requirements.sh
.archive-python/modules/: alarm.py  bootPiBlaster.py  bootPiBlaster.sh  config.py  context.py  tests.py  tm1637.py  weather.py
.archive-react/: run-client.js  run-server.js
.archive-react/client/: Alarm.js  Alarms.js  App.js  Auth.js  Mutation.js  index.js  package.json
.archive-react/server/: API.js  Database.js  package.json
Python/: display_controller.py  main.py  pins.ini  requirements.sh
Python/archive/: ExampleWeatherUndergroundAPI.json  _webapp_tests.py  d_con.py  pins.backup.ini  tm1637_example.py.py  tmp.py  weather_example.py  weather_example_data.json
Python/modules/: __init__.py  alarm.py  all_off.py  bootPiBlaster.py  bootPiBlaster.sh  config.py  fade.py  (+7 more)
client/: .eslintrc.js  package-lock.json  package.json
modules/: Alarm.jsx  Alarms.jsx  clock.es6  data.es6  debugger.es6  electronics.es6  electronics_js.es6  initialize.es6  scheduler.es6
pialarm/: alarm.py  app_alarm.py
scripts/: _tests.py  alarm.py  alarmTest.js  alarm_status.py  all_off.py  bootPiBlaster.py  bootPiBlaster.sh  clock.py  config.py  fade.py  lcd.aloo.py  lcd.py  lcd_rgb.py  pins.ini  pyBootPiBlaster.py
server/: API.js  Database.js  DatabasePromises.js  GraphQL.js  Server.js
tests/: __init__.py  test_zz_pialarm.py
views/: 404.html  enter.html  exit.html  index.html  login.html
(+26 files in other folders)
